--- a/index.html
+++ b/index.html
@@ -26,16 +26,10 @@
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/pencil.svg" alt="pencil icon" />Edit Profile
+              Edit Profile
             </button>
           </div>
-          <button type="button" class="profile__add-btn">
-            <img
-              src="./images/plus.svg"
-              alt="plus icon"
-              class="profile__plus-image"
-            />New Post
-          </button>
+          <button type="button" class="profile__add-btn">New Post</button>
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
